turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:13: error: value lenght is not a member of Array[Char]
	for (i<-0 to rule.lenght-1) {
                          ^LangtonsAnt:18: error: not found: value R
	if (rule(pos)==R) {droite()}
                       ^LangtonsAnt:22: error: not found: value i
	if(i!=rule.lenght-1) {setCouleurSol(colors(i+1))}
           ^LangtonsAnt:22: error: not found: value i
	if(i!=rule.lenght-1) {setCouleurSol(colors(i+1))}
                                                   ^